--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+.Card-img {
+  width: 100%;
+  height: 312px;
+  border-radius: 10px;
+  object-fit: contain;
+}
+
 .App {
   text-align: center;
 }
