--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,30 @@
 .Card-img {
   width: 100%;
-  height: 312px;
+  height: 327px;
   border-radius: 10px;
   object-fit: contain;
+}
+
+.Topping-img {
+  width: 100%;
+  height: 80px;
+  border-radius: 10px;
+  object-fit: contain;
+}
+
+.Product-img {
+  width: 400px;
+  height: 500px;
+  border-radius: 20px;
+  object-fit: cover;
+}
+
+.text-red {
+  color: #BD0707;
+}
+
+.text-brown {
+  color: #974A4A;
 }
 
 .btn-red {
@@ -29,4 +51,19 @@
 .btn-standard {
   width: 150px;
   padding: 5px;
+}
+
+.btn:focus {
+  box-shadow: none;
+}
+
+.form-control:focus {
+  border-color: #BD0707;
+  box-shadow: none;
+  -webkit-box-shadow: none;
+}
+
+.has-error .form-control:focus {
+  box-shadow: none;
+  -webkit-box-shadow: none;
 }
