--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,19 @@
   object-fit: cover;
 }
 
+.img-profile {
+  width: 150px;
+  height: 200px;
+  border-radius: 20px;
+  object-fit: cover;
+}
+
+.img-qrcode {
+  width: 100px;
+  height: 100px;
+  object-fit: contain;
+}
+
 .text-red {
   color: #BD0707;
 }
