--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,24 @@
+/* ------------- image ------------- */
+
 .Card-img {
-  width: 100%;
+  width: auto;
   height: 327px;
   border-radius: 10px;
-  object-fit: contain;
+  object-fit: cover;
 }
 
-.Topping-img {
+.Product-img {
+  width: auto;
+  height: 500px;
+  border-radius: 20px;
+  object-fit: cover;
+}
+
+.img-topping {
   width: 100%;
   height: 80px;
   border-radius: 10px;
   object-fit: contain;
-}
-
-.Product-img {
-  width: 400px;
-  height: 500px;
-  border-radius: 20px;
-  object-fit: cover;
 }
 
 .img-profile {
@@ -26,12 +28,89 @@
   object-fit: cover;
 }
 
+.img-cart {
+  width: 80px;
+  height: 80px;
+  border-radius: 10px;
+  object-fit: cover;
+}
+
 .img-qrcode {
   width: 100px;
   height: 100px;
   object-fit: contain;
 }
 
+/*------------ checkbox -------------*/
+
+.block-check {
+  display: block;
+  position: relative;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.hidden-check {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+cursor: pointer;
+}
+
+/* On mouse-over, add a grey background color */
+.block-check:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a green background */
+.block-check input:checked ~ .checkmark {
+  background-color: #21f39c;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.block-check input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.block-check .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+/*--checkbox css end--*/
+
+
+/* ----------- text ------------ */
 .text-red {
   color: #BD0707;
 }
@@ -40,6 +119,7 @@
   color: #974A4A;
 }
 
+/* ---------- button ---------- */
 .btn-red {
   background-color: #BD0707;
   color: white;
@@ -70,6 +150,7 @@
   box-shadow: none;
 }
 
+/* ---------- form ---------- */
 .form-control:focus {
   border-color: #BD0707;
   box-shadow: none;
