menyelesaikan problem topping dan cart

--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,7 @@
 .checkmark {
   position: absolute;
   top: 0;
-  left: 0;
+  right: 0;
   height: 25px;
   width: 25px;
   background-color: #eee;
