--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
   width: 150px;
   height: 200px;
   border-radius: 20px;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .img-cart {
@@ -39,6 +39,18 @@
   width: 100px;
   height: 100px;
   object-fit: contain;
+}
+
+.img-icon {
+    width: 25px;
+    height: 25px;
+}
+
+.img-avatar {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    object-fit: cover;
 }
 
 /*------------ checkbox -------------*/
@@ -148,6 +160,11 @@ cursor: pointer;
 
 .btn:focus {
   box-shadow: none;
+}
+
+.dropdown-item:active {
+    background-color: #BD0707;
+    color:white;
 }
 
 /* ---------- form ---------- */
